# stock-analysis-api

./: README.md  pyproject.toml
src/stock-analysis-service/: api.py  db.py  historical_data.py  portfolio.db  portfolio_calculations.py  scehmas.py
src/stock-analysis-service/routers/: portfolio.py  stocks.py
